<resources>
    <string name="app_name">TL_Project</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="username">UserName:</string>
    <string name="password">PassWord:</string>
    <string name="login">Login</string>
    <string name="loginb">Login</string>
    <string name="registb">Regist</string>
    <string name="logo">Logo</string>
    <string name="actionbutton">action</string>
    <string name="profilebutton">Profile</string>
    <string name="logoutbutton">logout</string>
    <string name="regist">Regist:</string>
    <string name="usernamer">Username:</string>
    <string name="passwordr">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="register">Register</string>
    <string name="title_activity_regist">Register</string>
    <string name="usernamet">[username]</string>
    <string name="curexp">[curexp]</string>
    <string name="exp">Exp:</string>
    <string name="nextlvlexp">[nextlvlexp]</string>
    <string name="back">Back</string>
    <string name="lvl">[lvl]</string>
    <string name="userprofile">UserProfile:</string>
    <string name="level">Level:</string>
    <string name="current_quest">Current Quest</string>
    <string name="title_activity_profile">Profile</string>
    <string name="questdesc">[QuestDesc]</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_with_email"> Sign In with Email</string>
    <string name="regist_with_email"> Regist with Email</string>
    <string name="client_ID2">374894266649-ls2kkj0ttvmeug6hr0shektdpc7e1ku0.apps.googleusercontent.com</string>
    <string name="client_ID">295385736653-0hrqn9nlgimudb2n04jc61i264t7bdp2.apps.googleusercontent.com</string>

</resources>
